--- a/sass/general/_footer-page.scss
+++ b/sass/general/_footer-page.scss
@@ -40,19 +40,17 @@
   margin-bottom: 20px;
   display: flex;
   justify-content: center;
-
-  @media screen and (min-width: $tablet) {
-    font-size: 24px;
-    justify-content: flex-start;
-  }
+  font-size: 24px;
 
   @media screen and (min-width: $desktop) {
     font-size: 26px;
+    justify-content: flex-start;
   }
 }
 .footer-contact-list {
-  @media screen and (max-width: $tablet) {
-    text-align: center;
+  text-align: center;
+  @media screen and (min-width: $desktop) {
+    text-align: start;
   }
 }
 .footer-address {
@@ -101,7 +99,7 @@
   text-align: center;
 
   @media screen and (min-width: $tablet) {
-    margin-top: 0px;
+    margin-top: 14px;
     text-align: start;
   }
 }
@@ -128,23 +126,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  & input {
-    height: 50px;
-    padding: 15px 16px;
-    background-color: #2f303a;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 4px;
-
-    width: 450px;
-
-    @media screen and (min-width: $tablet) {
-      margin-right: 12px;
-    }
-    @media screen and (min-width: $desktop) {
-      width: 358px;
-    }
-  }
 
   @media screen and (min-width: $desktop) {
     flex-direction: row;
@@ -203,11 +184,20 @@
   border-style: none;
   cursor: pointer;
 }
-.footer-form-imput {
+.footer-form-input {
+  height: 50px;
+  width: 450px;
   margin-bottom: 20px;
+  padding: 15px 16px;
+  background-color: #2f303a;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  color: $white-color;
 
   @media screen and (min-width: $desktop) {
+    width: 358px;
     margin-bottom: 0px;
+    margin-right: 12px;
   }
 }
 
