--- a/sass/general/_header.scss
+++ b/sass/general/_header.scss
@@ -27,9 +27,12 @@
   font-weight: 700;
   font-size: 24px;
   line-height: 1.2;
-
+  padding-bottom: 16px;
+  padding-top: 16px;
   @media screen and (min-width: $tablet) {
     margin-right: 88px;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   @media screen and (min-width: $desktop) {
@@ -124,6 +127,7 @@
   }
   @media screen and (min-width: $desktop) {
     margin-right: 50px;
+    margin-bottom: 0px;
   }
 }
 .link-active-page {
