--- a/sass/general/_menu.scss
+++ b/sass/general/_menu.scss
@@ -35,8 +35,8 @@
     width: 100%;
     top: 0;
     left: 0;
-    height: 796px;
-
+    height: 100%;
+    overflow: auto;
     background-color: $white-color;
     padding: 20px;
     text-align: center;
