--- a/sass/main.scss
+++ b/sass/main.scss
@@ -41,7 +41,10 @@ body.is-open {
 button {
   margin: 0;
 }
-
+input,
+textarea {
+  outline: none;
+}
 .container {
   margin-left: auto;
   margin-right: auto;
