--- a/sass/pages/studio/_modal-form.scss
+++ b/sass/pages/studio/_modal-form.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  z-index: 2;
+  z-index: 4;
   transition: transform 250ms ease-in-out, opacity 250ms linear;
 
   &.is-hidden {
@@ -99,6 +99,10 @@
     width: 448px;
     height: 40px;
   }
+
+  &:focus {
+    border: 1px solid #2196f3;
+  }
 }
 
 .information-label {
@@ -112,9 +116,12 @@
   color: $secondary-black-color;
   cursor: pointer;
 
+  .information-input:focus + &,
+  .information-input:not(:placeholder-shown) + & {
+    transform: translate(-42px, -100%);
+  }
   .information-input:focus + & {
     color: $blue-color;
-    transform: translate(-42px, -100%);
   }
 }
 
@@ -138,7 +145,8 @@
   left: 0;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .information-input:focus ~ & {
+  .information-input:focus ~ &,
+  .information-input:not(:placeholder-shown) ~ & {
     transform: translate(-18%, -100%);
   }
 }
